<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.finalquizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/schoolemblem"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_margin="18dp"/>

    <RadioGroup
        android:id="@+id/subject_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">
        <RadioButton
            android:id="@+id/math_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math"
            android:textAppearance="?android:textAppearanceMedium"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/science_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:textAppearance="?android:textAppearanceMedium"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/start_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTest"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="startTest"/>

    </LinearLayout>
